fea(api): added /api prefix to all endpoints
